# farstream

./: .gitignore  AUTHORS  Makefile  Makefile.am  NEWS  README  autogen.sh  configure.ac  farsight2-upnp.pc.in  farsight2.pc.in  farstream.pc.in  fs-upnp-simple-igd-thread.c  fs-upnp-simple-igd.c  fs-upnp-simple-igd.h  test-bare.c  test-thread.c  test.c  uninstalled-paths.sh
common/: Makefile.am  glib-gen.mak  gtk-doc-plugins.mak  gtk-doc.mak
common-modified/: Makefile.am  (+3 more)
common/m4/: Makefile.am  as-python.m4  gst-plugin-docs.m4
docs/libs/: Makefile.am  farsight-libs-docs.sgml  farsight-libs-sections.txt  farsight-libs.types  farsight2-libs-docs.sgml  farsight2-libs-sections.txt  farsight2-libs.types  farstream-libs-sections.txt
docs/plugins/: Makefile.am  farsight2-plugins-docs.sgml  farsight2-plugins-sections.txt  farsight2-plugins.types  farsight2-transmitters.types  farsight2-transmitters.types.in  farstream-plugins-sections.txt  farstream-plugins.types  gtkdoc-scangobj-transmitters
examples/commandline/: Makefile.am  simple-call-shm.c  simple-call.c
farstream/: Makefile.am  fs-candidate.h  fs-codec.c  fs-codec.h  fs-conference.c  fs-conference.h  fs-element-added-notifier.c  fs-element-added-notifier.h  fs-participant.c  fs-participant.h  fs-plugin.h  fs-rtp.c  fs-rtp.h  fs-session.c  fs-session.h  fs-stream-transmitter.h  fs-stream.c  fs-stream.h  fs-transmitter.c  fs-transmitter.h  fs-utils.h
gst-libs/ext/fssimpleupnp/: Makefile.am
gst-libs/ext/fsupnp/: Makefile.am  fs-upnp-simple-igd-thread.c  fs-upnp-simple-igd-thread.h  fs-upnp-simple-igd.c  fs-upnp-simple-igd.h
gst-libs/gst/farsight/: Makefile.am  fs-base-conference.c  fs-base-conference.h  fs-candidate.c  fs-candidate.h  fs-codec.c  fs-codec.h  fs-conference-iface.c  fs-conference-iface.h  fs-conference.c  fs-conference.h  fs-element-added-notifier.c  fs-element-added-notifier.h  fs-interfaces.c  fs-interfaces.h  fs-marshal.list  fs-participant.c  fs-participant.h  fs-plugin.c  fs-plugin.h  fs-private.h  fs-rtp.c  fs-rtp.h  fs-session.c  fs-session.h  fs-stream-transmitter.c  fs-stream-transmitter.h  fs-stream.c  fs-stream.h  fs-transmitter.c  fs-transmitter.h  fs-utils.c  fs-utils.h
gst-libs/gst/farstream/: Makefile.am  fs-candidate.c  fs-candidate.h  fs-codec.c  fs-codec.h  fs-conference.h  fs-plugin.c  fs-private.h  fs-rtp.h  fs-session.c  fs-session.h  fs-stream-transmitter.c  fs-stream-transmitter.h  fs-stream.h  fs-transmitter.c  fs-transmitter.h  fs-utils.c  fs-utils.h
gst/fsmsnconference/: Makefile.am  fs-msn-cam-recv-conference.c  fs-msn-cam-recv-conference.h  fs-msn-cam-send-conference.c  fs-msn-cam-send-conference.h  fs-msn-conference.c  fs-msn-conference.h  fs-msn-connection.c  fs-msn-connection.h  fs-msn-participant.c  fs-msn-participant.h  fs-msn-session.c  fs-msn-session.h  fs-msn-stream.c  fs-msn-stream.h  gstfsmsnconference.c
gst/fsrawconference/: Makefile.am  default-element-properties  fs-raw-conference-plugin.c  fs-raw-conference.c  fs-raw-conference.h  fs-raw-participant.c  fs-raw-participant.h  fs-raw-session.c  fs-raw-session.h  fs-raw-stream.c  fs-raw-stream.h
gst/fsrtpconference/: Makefile.am  default-codec-preferences  default-element-properties  fs-rtp-bitrate-adapter.c  fs-rtp-bitrate-adapter.h  fs-rtp-codec-cache.c  fs-rtp-codec-cache.h  fs-rtp-codec-negotiation.c  fs-rtp-codec-negotiation.h  fs-rtp-codec-specific.c  fs-rtp-codec-specific.h  fs-rtp-conference-plugin.c  fs-rtp-conference.c  fs-rtp-conference.h  fs-rtp-discover-codecs.c  fs-rtp-discover-codecs.h  fs-rtp-dtmf-event-source.c  fs-rtp-dtmf-event-source.h  fs-rtp-dtmf-sound-source.c  fs-rtp-dtmf-sound-source.h  fs-rtp-keyunit-manager.c  fs-rtp-keyunit-manager.h  fs-rtp-marshal.list  fs-rtp-packet-modder.c  fs-rtp-packet-modder.h  fs-rtp-participant.c  fs-rtp-participant.h  fs-rtp-session.c  fs-rtp-session.h  fs-rtp-special-codec.c  fs-rtp-special-codec.h  fs-rtp-special-source.c  fs-rtp-special-source.h  fs-rtp-specific-nego.c  fs-rtp-specific-nego.h  fs-rtp-stream.c  fs-rtp-stream.h  fs-rtp-substream.c  fs-rtp-substream.h  fs-rtp-tfrc.c  (+4 more)
gst/funnel/: Makefile.am  fs-funnel.c  gstfsfunnel.c  gstfsfunnel.h
gst/rtcpfilter/: Makefile.am  fs-rtcp-filter.c  fs-rtcp-filter.h
gst/videoanyrate/: Makefile.am  videoanyrate.c  videoanyrate.h
python/: Makefile.am  example.py  pyfarsight-filter.defs  pyfarsight.defs  pyfarsight.override  pyfarsightmodule.c  pyfarstream-filter.defs  pyfarstream.defs  pyfarstream.override  pyfarstreammodule.c  rebuild-defs.sh
tests/check/: Makefile.am  check-threadsafe.h  testutils.c  testutils.h
tests/check/base/: fscodec.c  fstransmitter.c  test1.conf
tests/check/elements/: funnel.c  rtcpfilter.c
tests/check/main/: generic.c  generic.h  rtpcodecs.c  rtpconference.c  rtpsendcodecs.c
tests/check/msn/: conference.c
tests/check/raw/: conference.c
tests/check/rtp/: codecs.c  conference.c  generic.c  generic.h  recvcodecs.c  sendcodecs.c
tests/check/transmitter/: fake-filter.c  fake-filter.h  generic.c  generic.h  multicast.c  nice.c  rawudp-upnp.c  rawudp-upnp.h  rawudp.c  shm.c  stunalternd.c  stunalternd.h
tests/check/upnp/: fsupnp.c
tests/check/utils/: binadded.c  gstelements.conf
tests/rtp/: Makefile.am  codec-discovery.c
transmitters/multicast/: Makefile.am  fs-interfaces.c  fs-interfaces.h  fs-multicast-stream-transmitter.c  fs-multicast-stream-transmitter.h  fs-multicast-transmitter.c  fs-multicast-transmitter.h
transmitters/nice/: Makefile.am  fs-nice-agent.c  fs-nice-agent.h  fs-nice-stream-transmitter.c  fs-nice-stream-transmitter.h  fs-nice-thread.c  fs-nice-thread.h  fs-nice-transmitter.c  fs-nice-transmitter.h
transmitters/rawudp/: Makefile.am  fs-interfaces.c  fs-interfaces.h  fs-rawudp-component.c  fs-rawudp-component.h  fs-rawudp-marshal.c  fs-rawudp-marshal.h  fs-rawudp-marshal.list  fs-rawudp-stream-transmitter.c  fs-rawudp-stream-transmitter.h  fs-rawudp-transmitter.c  fs-rawudp-transmitter.h  stun.c
transmitters/shm/: Makefile.am  fs-shm-stream-transmitter.c  fs-shm-stream-transmitter.h  fs-shm-transmitter.c  fs-shm-transmitter.h
(+33 files in other folders)
