SUBDIRS = m4

EXTRA_DIST = \
	gtk-doc.mak \
	gst-autogen.sh \
	gst.supp \
	check.mak \
	gtk-doc-plugins.mak \
	plugins.xsl \
	gstdoc-scangobj \
        coverage/coverage-report.pl \
        coverage/coverage-report.xsl \
        coverage/coverage-report-entry.pl \
	gst-xmlinspect.py mangle-tmpl.py scangobj-merge.py
