EXTRA_DIST = \
	as-ac-expand.m4 \
	codeset.m4 \
	gst-default.m4 \
	gst.m4 \
	inttypes.m4 \
	progtest.m4 \
	as-auto-alt.m4 \
	gettext.m4 \
	gst-doc.m4 \
	gst-plugindir.m4 \
	inttypes-pri.m4 \
	stdint_h.m4 \
	as-compiler-flag.m4 \
	glibc21.m4 \
	gst-error.m4 \
	gst-plugin-docs.m4 \
	isc-posix.m4 \
	uintmax_t.m4 \
	as-libtool.m4\
	gst-arch.m4\
	gst-feature.m4 \
	gst-valgrind.m4 \
	lcmessage.m4 \
	ulonglong.m4 \
	as-python.m4 \
	gst-args.m4 \
	gst-function.m4 \
	iconv.m4 \
	lib-ld.m4 \
	as-scrub-include.m4 \
	gst-check.m4 \
	gst-gettext.m4 \
	intdiv0.m4 \
	lib-link.m4 \
	as-version.m4 \
	gst-debuginfo.m4 \
	gst-glib2.m4 \
	inttypes_h.m4 \
	lib-prefix.m4
